<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>libsurvive_ros2</name>

  <version>0.0.2</version>

  <description>libsurvive driver for ROS2</description>

  <maintainer email="andrew.c.symington@gmail.com">Andrew Symington</maintainer>

  <license>MIT</license>

  <author email="andrew.c.symington@gmail.com">Andrew Symington</author>
  <author email="shkwon@tommoro.ai">Sunghyun Kwon</author>

  <depend>rclcpp</depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>diagnostic_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_ros</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
